--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <h1> Navigational Links </h1>
             <nav>
                 <ul>
-                    <li><a href="www.google">Home</a></li>
-                    <li><a href="www.instagram.com @greeshman122">Posts</a></li>
-                    <li><a href="www.whatsapp.com +91 7780300204">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#posts">Posts</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header><main>
